--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>It's my birthday!</h1>
-    <h2>On the 12th May</h2>
-    <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"/>
+    <div class="box1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat laudantium rerum eligendi! Similique, perspiciatis. Voluptatum blanditiis saepe, sequi illum ipsam tempore dolorem sint ratione in. Quod assumenda sequi officia sapiente?</p>
+       
+    </div>
+    <div class="box2"> </div>
+    <div class="box3"> </div>
 
-    <h3>What to bring:</h3>
-    <ul>
-        <li>Baloon (I love baloons)</li>
-        <li>cake (Iam really good at eating)</li>
-        <li>An appetie(there will be lots of food)</li>
-        <h3>this is where you need to go:</h3>
-        <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
-
-    </ul>
 </body>
 </html>
